# cg-project-2023

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
froggo/: CMakeLists.txt  main.cpp  test_controller.cpp
froggo/assets/alu/: LICENSE.txt
froggo/assets/brick/: LICENSE.txt
froggo/assets/car/: license.txt
froggo/assets/city/ap/: license.txt
froggo/assets/city/pav/: license.txt
froggo/assets/city/street_light/: license.txt
froggo/assets/grass/: license.txt
froggo/assets/marble/: LICENSE.txt
froggo/assets/road/: license.txt
froggo/assets/rusted/: LICENSE.txt
froggo/assets/tree/: license.txt
froggo/scenes/: default.yml  ggx.yml  other.yml
froggo/shaders_src/: diffuse.frag  ggx.frag  ggx_shader_norm.frag  shader.frag  shader.vert  shaders.yml  simple_frag.frag  simple_vert.vert  toon.frag
froggo/src/: camera_orchestrator.cpp  camera_orchestrator.hpp  car_camera.cpp  car_camera.hpp  car_controller.cpp  car_controller.hpp  control_switcher.cpp  main.cpp  scene_switcher.cpp  test_controller.cpp  test_controller.hpp
seng/: CMakeLists.txt  README.md
seng/include/private/seng/: glfwWindowWrapper.hpp  glfw_window.hpp  shader_loader.hpp  utils.hpp  vulkan_buffer.hpp  vulkan_command_buffer.hpp  vulkan_debug.hpp  vulkan_debug_messenger.hpp  vulkan_device.hpp  vulkan_fence.hpp  vulkan_framebuffer.hpp  vulkan_image.hpp  vulkan_internals.hpp  vulkan_object_shader.hpp  vulkan_pipeline.hpp  vulkan_queue_family_indices.hpp  vulkan_render_pass.hpp  vulkan_renderer.hpp  vulkan_shader_stage.hpp  vulkan_swapchain.hpp  vulkan_swapchain_support_details.hpp
seng/include/public/seng/: application.hpp  application_config.hpp  game_context.hpp  input_manager.hpp  log.hpp  primitive_types.hpp  transform.hpp
seng/include/seng/: application.hpp  application_config.hpp  camera.hpp  entity.hpp  game_context.hpp  glfw_window.hpp  hashes.hpp  hook.hpp  input_enums.hpp  input_manager.hpp  log.hpp  math.hpp  seng.hpp  time.hpp  utils.hpp  vulkan_fence.hpp  vulkan_queue_family_indices.hpp  vulkan_renderer.hpp  yaml_utils.hpp
seng/include/seng/components/: base_component.hpp  camera.hpp  component_ptr.hpp  definitions.hpp  free_controller.hpp  mesh_renderer.hpp  scene_config_component_factory.hpp  script.hpp  toggle.hpp  transform.hpp  utils.hpp
seng/include/seng/rendering/: buffer.hpp  command_buffer.hpp  debug_messenger.hpp  device.hpp  fence.hpp  framebuffer.hpp  glfw_window.hpp  global_uniform.hpp  hashes.hpp  image.hpp  mesh.hpp  object_shader.hpp  pipeline.hpp  primitive_types.hpp  render_pass.hpp  renderer.hpp  scene.hpp  shader_stage.hpp  swapchain.hpp
seng/include/seng/resources/: mesh.hpp  object_shader.hpp  object_shader_instance.hpp  shader_cache.hpp  shader_stage.hpp  texture.hpp
seng/include/seng/scene/: direct_light.hpp  entity.hpp  scene.hpp  scene_graph.hpp
seng/private/seng/: vulkan_internals.hpp
seng/src/: application.cpp  camera.cpp  entity.cpp  glfw_window.cpp  input_manager.cpp  log.cpp  math.cpp  seng.cpp  shader_loader.cpp  stb_impl.cpp  transform.cpp  utils.cpp  vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_debug_messenger.cpp  vulkan_device.cpp  vulkan_fence.cpp  vulkan_framebuffer.cpp  vulkan_image.cpp  vulkan_internals.cpp  vulkan_object_shader.cpp  vulkan_pipeline.cpp  vulkan_queue_family_indices.cpp  vulkan_render_pass.cpp  vulkan_renderer.cpp  vulkan_shader_stage.cpp  vulkan_swapchain.cpp  vulkan_swapchain_support_details.cpp
seng/src/components/: camera.cpp  free_controller.cpp  mesh_renderer.cpp  scene_config_component_factory.cpp  script.cpp  toggle.cpp  transform.cpp
seng/src/rendering/: buffer.cpp  command_buffer.cpp  debug_messenger.cpp  device.cpp  fence.cpp  framebuffer.cpp  glfw_window.cpp  global_uniform.cpp  image.cpp  mesh.cpp  object_shader.cpp  pipeline.cpp  queue_family_indices.cpp  render_pass.cpp  renderer.cpp  scene.cpp  shader_stage.cpp  swapchain.cpp  swapchain_support_details.cpp
seng/src/resources/: mesh.cpp  object_shader.cpp  object_shader_instance.cpp  shader_cache.cpp  shader_stage.cpp  texture.cpp
seng/src/scene/: entity.cpp  scene.cpp  scene_graph.cpp
src/: CMakeLists.txt  main.cpp
